working quiz.jsx

--- a/src/index.css
+++ b/src/index.css
@@ -6,7 +6,7 @@
 @font-face {
   font-family: Rift Soft;
   font-weight: 300;
-  src: url("/public/fonts/Rift Soft Demi.otf");
+  src: url("/fonts/Rift Soft Demi.otf");
 }
 
 .hex {
