--- a/src/index.css
+++ b/src/index.css
@@ -202,3 +202,12 @@
        0% 25%);
    clip-path: polygon(50% 0%, 100% 25%, 100% 75%, 50% 100%, 0% 75%, 0% 25%);
  }
+
+.flip-90 {
+  transition: transform 0.5s;
+  transform: rotateY(90deg);
+}
+
+/* .flip-90:hover {
+  transform: rotateY(90deg);
+} */
